--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 <script type="text/javascript">
 function get_short_url(long_url, login, api_key, func){
 
-		$.getJSON("https://api.bitly.com/v3/shorten?callback=?",{ 
+		$.getJSON("https://api-ssl.bitly.com/v3/shorten?callback=?",{ 
             "format": "json",
             "apiKey": api_key,
             "login": login,
